--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^3.2.2-rc.1",
     "next": "9.5.2",
     "next-images": "^1.4.1",
     "react": "16.13.1",
